# advent_earlier

./: .gitignore  .pre-commit-config.yaml  README.md  automation.py  pyproject.toml
0_template_files/: solution_template.py  test_solution_template.py
