[tool.poetry]
name = "advent2023"
version = "0.1.0"
description = ""
authors = ["ann <ann@adimian.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12"
httpx = "^0.25.0"
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
setuptools = "^68.2.2"
flake8 = "^6.1.0"
prettier = "^0.0.7"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
